manifests/argocd/apps/vaultwarden/base/apps/ingress-internet.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-internet
  namespace: vaultwarden
  annotations:
    argocd.argoproj.io/sync-wave: "111"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  rules:
  - host: vault.janz.digital
    http:
      paths:
        - path: /
          backend:
            service:
              name: vaultwarden
              port:
                number: 80
          pathType: Prefix
        - path: /notifications/hub/negotiate
          backend:
            service:
              name: vaultwarden
              port:
                number: 80
          pathType: Prefix
        - path: /notifications/hub
          backend:
            service:
              name: vaultwarden
              port:
                number: 3012
          pathType: Prefix
        - path: /admin
          backend:
            service:
              name: foo
              port:
                number: 80
          pathType: Prefix
